[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
bcrypt = "0.17.1"
chrono = "0.4.42"
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"] }
repositories = { version = "0.1.0", path = "../repositories" }
serde = "1.0.228"
serde_json = "1.0.145"
sqlx = "0.8.6"
tracing = "0.1.41"
uuid = "1.18.1"
validator = { version = "0.20.0", features = ["derive"] }
